4 Transforms의 lambda 함수 할 차례

--- a/Introduction to PyTorch/1, Quickstart.ipynb
+++ b/Introduction to PyTorch/1, Quickstart.ipynb
@@ -66,6 +66,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create Models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -131,6 +138,13 @@
     "    \n",
     "model = NeuralNetwork().to(device)\n",
     "print(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Optimizing the Model Parameters"
    ]
   },
   {
@@ -296,6 +310,13 @@
     "    train(train_dataloader, model, loss_fn, optimizer)\n",
     "    test(test_dataloader, model, loss_fn)\n",
     "print(\"Done!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Saving, Loading Model"
    ]
   },
   {
