폴더 정리 및 gitignore 추가

--- a/Deep Learning/Introduction to PyTorch/4, Transforms.ipynb
+++ b/Deep Learning/Introduction to PyTorch/4, Transforms.ipynb
@@ -15,10 +15,8 @@
     "    train=True,\n",
     "    download=True,\n",
     "    transform=ToTensor(),  # image의 pixel값을 [0, 1]으로 scaling하는 기능도 존재\n",
-    "    target_transform=Lambda(lambda y: torch.zeros(10, dtype=torch.float).scatter_(0, torch.tensor(y), value=1))  # one-hot encoding 파트\n",
-    "    # torch.zeros(10, dtype=torch.float) -> 0으로 이루어진 길이가 10인 tensor 반환\n",
-    "    # .scatter_(0, torch.tensor(y), value=1)\n",
-    "    # -> 첫번째 parameter는 dimension, 0이면 행방향, 1이면 열방향\n",
+    "    target_transform=Lambda(lambda y: torch.zeros(10, dtype=torch.float).scatter_(0, torch.tensor(y), value=1))\n",
+    "    # \n",
     ")"
    ]
   }
