--- a/Machine_Learning/2023_전력사용량_예측_AI_경진대회/model.ipynb
+++ b/Machine_Learning/2023_전력사용량_예측_AI_경진대회/model.ipynb
@@ -4,12 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "해야하는 것\n",
+    "1, 월, 일을 그냥 index 형태로 바꿔볼까\n",
+    "2, https://dacon.io/competitions/official/235736/codeshare/2877?page=1&dtype=recent 이거 보고 따라해보기\n",
+    "새로운 loss function 정의해서 집어넣기 - 값을 더 크게 예측하는 것이 Error값을 작게 만든다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Symmetric Mean Absolute Percentage Error 정의"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -220,9 +230,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['건물기타', '공공', '대학교', '데이터센터', '백화점및아울렛', '병원', '상용', '아파트', '연구소',\n",
+       "       '지식산업센터', '할인마트', '호텔및리조트'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "building_info.replace('-', 0, inplace=True)  # 기존 데이터에서 Null 값이 - 로 표기되어 있는 부분 변환\n",
     "onehotencoder = OneHotEncoder(sparse_output=False)\n",
@@ -234,12 +257,13 @@
     "building = pd.concat([building_info, temp], axis=1)\n",
     "del building['건물유형']\n",
     "building = building.astype('float')\n",
+    "temp.columns\n",
     "# building.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -383,6 +407,7 @@
     }
    ],
    "source": [
+    "# test code\n",
     "def data_preprocessing(data):  \n",
     "    data.fillna(0, inplace=True)\n",
     "    data['연'] = data['num_date_time'].apply(lambda x: int(x.split('_')[1][:4]))  # 연, 월, 일, 요일 데이터 생성\n",
@@ -390,6 +415,10 @@
     "    data['일'] = data['num_date_time'].apply(lambda x: int(x.split('_')[1][6:8]))\n",
     "    data['시'] = data['num_date_time'].apply(lambda x: int(x.split(' ')[1]))\n",
     "    data['요일'] = data['num_date_time'].apply(lambda x: datetime.date(int(x.split('_')[1][:4]), int(x.split('_')[1][4:6]), int(x.split('_')[1][6:8])).isoweekday())  # 월: 1, 일: 7\n",
+    "    # data['건물별_시간별_평균']\n",
+    "    # train['day_hour_mean'] = train.progress_apply(lambda x: data.loc[(data.num == x['num']) & (data.hour == x['hour']) & (data.day == x['day']) ,'power'].values[0], axis = 1)\n",
+    "    # train['hour_std'] = train.progress_apply(lambda x : power_hour_std.loc[(power_hour_std.num == x['num']) & (power_hour_std.hour == x['hour']) ,'power'].values[0], axis = 1)\n",
+    "\n",
     "    del data['일시']\n",
     "    del data['num_date_time']\n",
     "    \n",
@@ -404,7 +433,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "tqdm.pandas() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtqdm\u001b[39;00m \u001b[39mimport\u001b[39;00m tqdm\n\u001b[1;32m----> 3\u001b[0m tqdm\u001b[39m.\u001b[39;49mpandas(tqdm())\n\u001b[0;32m      5\u001b[0m train[\u001b[39m'\u001b[39m\u001b[39mday_hour_mean\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m train\u001b[39m.\u001b[39mprogress_apply(\u001b[39mlambda\u001b[39;00m x: train\u001b[39m.\u001b[39mloc[(train[\u001b[39m'\u001b[39m\u001b[39m공공\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m&\u001b[39m (train[\u001b[39m'\u001b[39m\u001b[39m시\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m x[\u001b[39m'\u001b[39m\u001b[39m시\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39m&\u001b[39m (train[\u001b[39m'\u001b[39m\u001b[39m일\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m x[\u001b[39m'\u001b[39m\u001b[39m일\u001b[39m\u001b[39m'\u001b[39m]) ,\u001b[39m'\u001b[39m\u001b[39m전력소비량(kWh)\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalues[\u001b[39m0\u001b[39m], axis \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[0;32m      6\u001b[0m train\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[1;31mTypeError\u001b[0m: tqdm.pandas() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "tqdm.pandas(tqdm())\n",
+    "\n",
+    "train['day_hour_mean'] = train.progress_apply(lambda x: train.loc[(train['공공'] == 1) & (train['시'] == x['시']) & (train['일'] == x['일']) ,'전력소비량(kWh)'].values[0], axis = 1)\n",
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>기온(C)</th>\n",
+       "      <th>강수량(mm)</th>\n",
+       "      <th>풍속(m/s)</th>\n",
+       "      <th>습도(%)</th>\n",
+       "      <th>전력소비량(kWh)</th>\n",
+       "      <th>연</th>\n",
+       "      <th>월</th>\n",
+       "      <th>일</th>\n",
+       "      <th>시</th>\n",
+       "      <th>요일</th>\n",
+       "      <th>...</th>\n",
+       "      <th>대학교</th>\n",
+       "      <th>데이터센터</th>\n",
+       "      <th>백화점및아울렛</th>\n",
+       "      <th>병원</th>\n",
+       "      <th>상용</th>\n",
+       "      <th>아파트</th>\n",
+       "      <th>연구소</th>\n",
+       "      <th>지식산업센터</th>\n",
+       "      <th>할인마트</th>\n",
+       "      <th>호텔및리조트</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>1085.28</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1047.36</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>974.88</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   기온(C)  강수량(mm)  풍속(m/s)  습도(%)  전력소비량(kWh)     연  월  일  시  요일  ...  대학교  \\\n",
+       "0   18.6      0.0      0.9   42.0     1085.28  2022  6  1  0   3  ...  0.0   \n",
+       "1   18.0      0.0      1.1   45.0     1047.36  2022  6  1  1   3  ...  0.0   \n",
+       "2   17.7      0.0      1.5   45.0      974.88  2022  6  1  2   3  ...  0.0   \n",
+       "\n",
+       "   데이터센터  백화점및아울렛   병원   상용  아파트  연구소  지식산업센터  할인마트  호텔및리조트  \n",
+       "0    0.0      0.0  0.0  0.0  0.0  0.0     0.0   0.0     0.0  \n",
+       "1    0.0      0.0  0.0  0.0  0.0  0.0     0.0   0.0     0.0  \n",
+       "2    0.0      0.0  0.0  0.0  0.0  0.0     0.0   0.0     0.0  \n",
+       "\n",
+       "[3 rows x 27 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# def data_preprocessing(data):  \n",
+    "#     data.fillna(0, inplace=True)\n",
+    "#     data['연'] = data['num_date_time'].apply(lambda x: int(x.split('_')[1][:4]))  # 연, 월, 일, 요일 데이터 생성\n",
+    "#     data['월'] = data['num_date_time'].apply(lambda x: int(x.split('_')[1][4:6]))\n",
+    "#     data['일'] = data['num_date_time'].apply(lambda x: int(x.split('_')[1][6:8]))\n",
+    "#     data['시'] = data['num_date_time'].apply(lambda x: int(x.split(' ')[1]))\n",
+    "#     data['요일'] = data['num_date_time'].apply(lambda x: datetime.date(int(x.split('_')[1][:4]), int(x.split('_')[1][4:6]), int(x.split('_')[1][6:8])).isoweekday())  # 월: 1, 일: 7\n",
+    "    \n",
+    "#     del data['일시']\n",
+    "#     del data['num_date_time']\n",
+    "    \n",
+    "#     data = pd.merge(data, building, on='건물번호')\n",
+    "#     del data['건물번호']\n",
+    "#     display(data.head(3))\n",
+    "#     return data\n",
+    "\n",
+    "# train.drop(['일조(hr)', '일사(MJ/m2)'], axis=1, inplace=True)\n",
+    "# train = data_preprocessing(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,151 +719,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>월</th>\n",
-       "      <th>일</th>\n",
-       "      <th>시</th>\n",
-       "      <th>요일</th>\n",
-       "      <th>연면적(m2)</th>\n",
-       "      <th>냉방면적(m2)</th>\n",
-       "      <th>ESS저장용량(kWh)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>월</th>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>-1.333186e-01</td>\n",
-       "      <td>-8.672975e-17</td>\n",
-       "      <td>-3.773670e-02</td>\n",
-       "      <td>5.220941e-15</td>\n",
-       "      <td>5.223730e-15</td>\n",
-       "      <td>6.512695e-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>일</th>\n",
-       "      <td>-1.333186e-01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>2.210557e-17</td>\n",
-       "      <td>2.227065e-02</td>\n",
-       "      <td>-5.970802e-16</td>\n",
-       "      <td>-6.037663e-16</td>\n",
-       "      <td>1.905329e-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>시</th>\n",
-       "      <td>-8.672975e-17</td>\n",
-       "      <td>2.210557e-17</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>-2.866971e-18</td>\n",
-       "      <td>-3.897512e-16</td>\n",
-       "      <td>-3.556055e-16</td>\n",
-       "      <td>-6.568382e-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>요일</th>\n",
-       "      <td>-3.773670e-02</td>\n",
-       "      <td>2.227065e-02</td>\n",
-       "      <td>-2.866971e-18</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.692890e-15</td>\n",
-       "      <td>1.685817e-15</td>\n",
-       "      <td>6.936187e-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>연면적(m2)</th>\n",
-       "      <td>5.220941e-15</td>\n",
-       "      <td>-5.970802e-16</td>\n",
-       "      <td>-3.897512e-16</td>\n",
-       "      <td>1.692890e-15</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>9.988839e-01</td>\n",
-       "      <td>-2.173528e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>냉방면적(m2)</th>\n",
-       "      <td>5.223730e-15</td>\n",
-       "      <td>-6.037663e-16</td>\n",
-       "      <td>-3.556055e-16</td>\n",
-       "      <td>1.685817e-15</td>\n",
-       "      <td>9.988839e-01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>-1.920016e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ESS저장용량(kWh)</th>\n",
-       "      <td>6.512695e-15</td>\n",
-       "      <td>1.905329e-16</td>\n",
-       "      <td>-6.568382e-17</td>\n",
-       "      <td>6.936187e-16</td>\n",
-       "      <td>-2.173528e-02</td>\n",
-       "      <td>-1.920016e-02</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         월             일             시            요일  \\\n",
-       "월             1.000000e+00 -1.333186e-01 -8.672975e-17 -3.773670e-02   \n",
-       "일            -1.333186e-01  1.000000e+00  2.210557e-17  2.227065e-02   \n",
-       "시            -8.672975e-17  2.210557e-17  1.000000e+00 -2.866971e-18   \n",
-       "요일           -3.773670e-02  2.227065e-02 -2.866971e-18  1.000000e+00   \n",
-       "연면적(m2)       5.220941e-15 -5.970802e-16 -3.897512e-16  1.692890e-15   \n",
-       "냉방면적(m2)      5.223730e-15 -6.037663e-16 -3.556055e-16  1.685817e-15   \n",
-       "ESS저장용량(kWh)  6.512695e-15  1.905329e-16 -6.568382e-17  6.936187e-16   \n",
-       "\n",
-       "                   연면적(m2)      냉방면적(m2)  ESS저장용량(kWh)  \n",
-       "월             5.220941e-15  5.223730e-15  6.512695e-15  \n",
-       "일            -5.970802e-16 -6.037663e-16  1.905329e-16  \n",
-       "시            -3.897512e-16 -3.556055e-16 -6.568382e-17  \n",
-       "요일            1.692890e-15  1.685817e-15  6.936187e-16  \n",
-       "연면적(m2)       1.000000e+00  9.988839e-01 -2.173528e-02  \n",
-       "냉방면적(m2)      9.988839e-01  1.000000e+00 -1.920016e-02  \n",
-       "ESS저장용량(kWh) -2.173528e-02 -1.920016e-02  1.000000e+00  "
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# cmap = sns.light_palette(\"darkgray\", as_cmap=True)\n",
-    "# sns.heatmap(data.corr(), annot=True, cmap=cmap)\n",
-    "# plt.show()\n",
-    "data[data.columns[:-12]].corr()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -644,11 +727,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = ['월', '일', '시', '요일', '냉방면적(m2)', 'ESS저장용량(kWh)', '건물기타', '공공', '대학교', '데이터센터',\n",
+    "columns = ['월', '일', '시', '요일', '냉방면적(m2)', '연면적(m2)', 'ESS저장용량(kWh)', '건물기타', '공공', '대학교', '데이터센터',\n",
     "           '백화점및아울렛', '병원', '상용', '아파트', '연구소', '지식산업센터', '할인마트', '호텔및리조트']\n",
     "\n",
     "data = train[columns]\n",
@@ -658,18 +741,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6.073335556817791"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m RFR \u001b[39m=\u001b[39m RandomForestRegressor(criterion\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mabsolute_error\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m RFR\u001b[39m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m      3\u001b[0m y_pred \u001b[39m=\u001b[39m RFR\u001b[39m.\u001b[39mpredict(X_test)\n\u001b[0;32m      4\u001b[0m smape(y_test, y_pred)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
     }
    ],
    "source": [
